# base_crud

./: .flake8  .pre-commit-config.yaml  pyproject.toml
base_crud/: __init__.py
